# bytebeam-esp-idf-sdk

./: .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Kconfig  README.md  idf_component.yml  library.json  sdkconfig
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  issue-report.yml
bytebeam_esp_sdk/: bytebeam_esp_hal.c  bytebeam_sdk.h
components/bytebeam_esp_sdk/: CMakeLists.txt  bytebeam_actions.c  bytebeam_esp_hal.c  bytebeam_sdk.c  user_actions.c
components/bytebeam_esp_sdk/include/: .bytebeam_sdk.h.swp  bytebeam_actions.h  bytebeam_esp_hal.h  bytebeam_sdk.h  user_actions.h  utils.h
demo_example/: CMakeLists.txt  Makefile  sdkconfig
demo_example/main/: CMakeLists.txt  app_main.c
example/: CMakeLists.txt  sdkconfig
example/main/: app_main.c
examples/: README.md
examples/actions_handling/: CMakeLists.txt  README.md
examples/actions_handling/main/: app_main.c
examples/basic_example/: CMakeLists.txt  sdkconfig
examples/basic_example/main/: CMakeLists.txt  app_main.c
examples/basic_ota/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/basic_ota/main/: app_main.c
examples/basic_ota_rollback/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/basic_ota_rollback/main/: app_main.c
examples/basic_ota_with_rollback/: CMakeLists.txt  README.md
examples/basic_ota_with_rollback/main/: CMakeLists.txt  app_main.c
examples/cloud_logging/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/cloud_logging/main/: app_main.c
examples/custom_device_shadow/: CMakeLists.txt
examples/esp32_touch/: CMakeLists.txt
examples/esp32_touch/main/: CMakeLists.txt  app_main.c
examples/esp32_touch_example/: CMakeLists.txt  README.md
examples/esp32_touch_example/main/: CMakeLists.txt  app_main.c
examples/esp_touch/: CMakeLists.txt  README.md  sdkconfig
examples/esp_touch/main/: app_main.c
examples/hello_cmake/: CMakeLists.txt  README.md  build_app.bat  config_app.bat  flash_monitor.bat  sdkconfig.defaults
examples/hello_cmake/components/led_strip/: .component_hash  idf_component.yml
examples/hello_cmake/main/: app_main.c  led_driver.c
examples/hello_wokwi/: CMakeLists.txt  README.md  diagram.json  sdkconfig.defaults  wokwi.toml
examples/hello_wokwi/main/: app_main.c
examples/integrations/hello_cmake/: CMakeLists.txt
examples/integrations/hello_cmake/components/: README.md
examples/integrations/hello_cmake/main/: app_main.c
examples/integrations/hello_cmake/main/include/: led_driver.h
examples/integrations/hello_wokwi/: sdkconfig.defaults
examples/integrations/hello_wokwi/main/: app_main.c
examples/provisioning/main/: CMakeLists.txt  app_main.c
examples/push_coredump/: CMakeLists.txt  README.md  partitions_example.csv  sdkconfig.defaults
examples/push_coredump/info/: command.txt  coredump.b64  coredump_data.txt
examples/push_coredump/main/: CMakeLists.txt  app_main.c
examples/push_data/: CMakeLists.txt  README.md
examples/push_data/batch_mqtt_data/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/push_data/batch_mqtt_data/main/: app_main.c
examples/push_data/custom_device_shadow/: README.md  sdkconfig.defaults
examples/push_data/custom_device_shadow/main/: app_main.c  idf_component.yml
examples/push_data/esp_touch/: sdkconfig.defaults
examples/push_data/esp_touch/main/: CMakeLists.txt  app_main.c
examples/push_data/main/: app_main.c
examples/push_data/sht31_data_logger/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/push_data/sht31_data_logger/main/: CMakeLists.txt  app_main.c
examples/push_data/temp_humid/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/receive_data/actions_handling/: CMakeLists.txt  partitions_example.csv  sdkconfig.defaults
examples/receive_data/toggle_led/: README.md  sdkconfig.defaults
examples/receive_data/update_config/: sdkconfig.defaults
examples/setup_client/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
examples/setup_client/main/: app_main.c
examples/sht31_temp_humid/: CMakeLists.txt  sdkconfig
examples/sht31_temp_humid/main/: CMakeLists.txt  app_main.c  sht31.h
examples/temp_humid/: CMakeLists.txt  README.md  sdkconfig
examples/temp_humid/main/: app_main.c
examples/temp_humid_example/: sdkconfig
examples/temp_humid_example/main/: CMakeLists.txt  app_main.c
examples/toggle_led/: CMakeLists.txt  README.md
examples/toggle_led/main/: CMakeLists.txt  app_main.c  idf_component.yml
examples/update_config/: CMakeLists.txt  README.md
examples/update_config/main/: app_main.c
include/: README.md  bytebeam_actions.h  bytebeam_client.h  bytebeam_esp_hal.h  bytebeam_log.h  bytebeam_sdk.h
include/core_sdk/: bytebeam_action.h  bytebeam_client.h  bytebeam_log.h  bytebeam_ota.h  bytebeam_sdk.h  bytebeam_stream.h
include/mcu_hal/: bytebeam_esp_hal.h  bytebeam_hal.h
main/: CMakeLists.txt  app_main.c  bytebeam_actions.c  bytebeam_actions.h  bytebeam_esp_hal.c  bytebeam_esp_hal.h  bytebeam_sdk.c  bytebeam_sdk.h  component.mk  user_actions.c  user_actions.h
provisioning/: CMakeLists.txt  RAEDME.md  README.md  sdkconfig
provisioning/config_data/: device_config.json
provisioning/fatfs_provisioning/: README.md  partitions_example.csv  sdkconfig.defaults
provisioning/fatfs_provisioning/main/: CMakeLists.txt  app_main.c
provisioning/main/: app_main.c
provisioning/spiffs_provisioning/: README.md  sdkconfig.defaults
provisioning/spiffs_provisioning/config_data/: .gitkeep  device_config.json
provisioning/spiffs_provisioning/main/: app_main.c
src/: README.md  bytebeam_action.c  bytebeam_actions.c  bytebeam_client.c  bytebeam_esp_hal.c  bytebeam_log.c  bytebeam_ota.c  bytebeam_sdk.c  bytebeam_stream.c  bytebeam_streams.c
src/bytebeam_hal/: .gitkeep
src/bytebeam_sdk/: bytebeam_client.c  bytebeam_ota.c
src/bytebeam_sdk/include/: bytebeam_log.h  bytebeam_ota.h  bytebeam_sdk.h  bytebeam_streams.h
src/core_sdk/: bytebeam_action.c  bytebeam_client.c  bytebeam_log.c  bytebeam_ota.c  bytebeam_stream.c
src/mcu_hal/: bytebeam_esp_hal.c
(+7 files in other folders)
