idf_component_register(
    INCLUDE_DIRS 
        "src/bytebeam_hal/bytebeam_esp_hal"
        "src/bytebeam_sdk/include"
    SRCS 
        "src/bytebeam_hal/bytebeam_esp_hal/bytebeam_esp_hal.c"
        "src/bytebeam_sdk/bytebeam_client.c" 
        "src/bytebeam_sdk/bytebeam_log.c"
        "src/bytebeam_sdk/bytebeam_actions.c"
        "src/bytebeam_sdk/bytebeam_streams.c"
        "src/bytebeam_sdk/bytebeam_ota.c"             
    PRIV_REQUIRES 
        "json"
        "mqtt"
        "nvs_flash"
        "esp_https_ota"
        "app_update"
        "spiffs"
        "fatfs"
        "esp_timer")
