idf_component_register(
    INCLUDE_DIRS 
        "include"    
    SRCS 
        "src/bytebeam_esp_hal.c" 
        "src/bytebeam_client.c"
        "src/bytebeam_action.c"
        "src/bytebeam_stream.c"
        "src/bytebeam_ota.c"
        "src/bytebeam_log.c"       
    PRIV_REQUIRES 
        "json"
        "mqtt"
        "nvs_flash"
        "esp_https_ota"
        "app_update"
        "spiffs"
        "fatfs"
        "esp_timer")
