idf_component_register(
    INCLUDE_DIRS 
        "include/mcu_hal"
        "include/core_sdk"
    SRCS 
        "src/mcu_hal/bytebeam_esp_hal.c" 
        "src/core_sdk/bytebeam_client.c"
        "src/core_sdk/bytebeam_action.c"
        "src/core_sdk/bytebeam_stream.c"
        "src/core_sdk/bytebeam_ota.c"
        "src/core_sdk/bytebeam_log.c"     
    PRIV_REQUIRES 
        "json"
        "mqtt"
        "nvs_flash"
        "esp_https_ota"
        "app_update"
        "spiffs"
        "fatfs"
        "esp_timer")
