idf_component_register(SRCS "app_main.c" 
                            "../../bytebeam_esp_sdk/bytebeam_actions.c"
                            "../../bytebeam_esp_sdk/bytebeam_esp_hal.c"
                            "../../bytebeam_esp_sdk/bytebeam_sdk.c" 
                            "../../bytebeam_esp_sdk/user_actions.c" 
                       INCLUDE_DIRS "../../bytebeam_esp_sdk"
                      )



